--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    	<h1>Project built and ready to start !</h1>
+    	<h1>Achievements manager</h1>
         <button class="button" id="1">Achievement 1</button>
         <button class="button" id="2">Achievement 2</button>
         <div class="achievement-container"></div>
